Added (basic) CSS stylesheet

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="master.css">
     <title>nxdk homebrew</title>
   </head>
   <body>
   <h1>Welcome to nxdk homebrew!</h1>
   <h3>This is a website that hosts the latest news and binaries for nxdk-made homebrew</h3>
+  <h1>What is nxdk?</h1>
+  <p>nxdk (new xbox development kit) is a FOSS (Free and Open Source Software) toolchain to develop
+     homebrew for the Original Xbox console from Microsoft</p>
   </body>
 </html>
