--- a/index.html
+++ b/index.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
+<!-- Copyright 2020 Kosmas Raptis
+Contact via keeperkosmas6@gmail.com
+
+This program is free software: you can redistribute it and/or modify
+   it under the terms of the GNU Affero General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program.  If not, see <https://www.gnu.org/licenses/>.
+
+-->
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -7,7 +24,8 @@
   </head>
   <body>
   <h1>Welcome to nxdk homebrew!</h1>
-  <h3>This is a website that hosts the latest news and binaries for nxdk-made homebrew</h3>
+  <h3>This is a website that hosts the latest news and binaries for nxdk-made homebrew. The source code of this website can be found
+  <a href="https://github.com/kosmas12/nxdk-homebrew-site">here</a> </h3>
   <h1>What is nxdk?</h1>
   <p>nxdk (new xbox development kit) is a FOSS (Free and Open Source Software) toolchain to develop
      homebrew for the Original Xbox console from Microsoft</p>
