Changed background color

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@ This program is free software: you can redistribute it and/or modify
   </head>
   <body>
   <h1>Welcome to nxdk homebrew!</h1>
-  <h3>This is a website that hosts the latest news and binaries for nxdk-made homebrew. The source code of this website can be found
-  <a href="https://github.com/kosmas12/nxdk-homebrew-site">here</a> </h3>
-  <h1>What is nxdk?</h1>
-  <p>nxdk (new xbox development kit) is a FOSS (Free and Open Source Software) toolchain to develop
-     homebrew for the Original Xbox console from Microsoft</p>
+  <h3>This is a website that hosts the latest news and binaries for legal Xbox homebrew made with nxdk. The source code of this website can be found
+  <a href="https://github.com/kosmas12/nxdk-homebrew-site">here</a></h3>
   </body>
 </html>
